[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/characters/jevil/asset_jevil.tres" type="SpriteFrames" id=1]
[ext_resource path="res://objects/enemies/jevil/enemy_jevil.gd" type="Script" id=2]
[ext_resource path="res://assets/characters/jevil/spr_jevil_chain.png" type="Texture" id=3]
[ext_resource path="res://assets/characters/jevil/spr_jevil_head.png" type="Texture" id=4]
[ext_resource path="res://assets/sounds/jevilHa1.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/sounds/jevilHa0.ogg" type="AudioStream" id=6]
[ext_resource path="res://assets/sounds/enemyHurtSound.ogg" type="AudioStream" id=7]
[ext_resource path="res://assets/sounds/jevilLaugh0.ogg" type="AudioStream" id=8]
[ext_resource path="res://assets/sounds/jevilMetamorphosis.ogg" type="AudioStream" id=9]
[ext_resource path="res://assets/characters/jevil/spr_jevil_devilsknife.png" type="Texture" id=10]
[ext_resource path="res://assets/battle/spr_hypnoRing0.png" type="Texture" id=11]
[ext_resource path="res://assets/battle/spr_hypnoRing2.png" type="Texture" id=12]
[ext_resource path="res://assets/battle/spr_hypnoRing1.png" type="Texture" id=13]
[ext_resource path="res://assets/sounds/magicsprinkle.ogg" type="AudioStream" id=14]

[node name="enemy_jevil" type="Node2D"]
script = ExtResource( 2 )

[node name="shadow" type="Node2D" parent="."]
position = Vector2( 0, 11 )

[node name="shadow" type="ColorRect" parent="shadow"]
margin_left = -13.0
margin_top = -2.0
margin_right = 13.0
margin_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="spriteJoint" type="Node2D" parent="."]

[node name="sprite" type="AnimatedSprite" parent="spriteJoint"]
frames = ExtResource( 1 )
animation = "idle"
playing = true
offset = Vector2( 0, -10 )

[node name="chainJoint" type="Node2D" parent="spriteJoint"]
visible = false

[node name="chain0" type="Sprite" parent="spriteJoint/chainJoint"]
position = Vector2( 1, -10 )
texture = ExtResource( 3 )

[node name="chain1" type="Sprite" parent="spriteJoint/chainJoint"]
position = Vector2( 1, -10 )
texture = ExtResource( 3 )

[node name="chain2" type="Sprite" parent="spriteJoint/chainJoint"]
position = Vector2( 1, -10 )
texture = ExtResource( 3 )

[node name="chain3" type="Sprite" parent="spriteJoint/chainJoint"]
position = Vector2( 1, -10 )
texture = ExtResource( 3 )

[node name="head" type="Sprite" parent="spriteJoint"]
visible = false
position = Vector2( 1, -14 )
texture = ExtResource( 4 )

[node name="multipleJevils" type="Node2D" parent="spriteJoint"]
visible = false

[node name="jevil0" type="Node2D" parent="spriteJoint/multipleJevils"]
position = Vector2( -4, -22 )

[node name="sprite" type="AnimatedSprite" parent="spriteJoint/multipleJevils/jevil0"]
frames = ExtResource( 1 )
animation = "bounce"
frame = 1
speed_scale = 1.5
playing = true

[node name="jevil1" type="Node2D" parent="spriteJoint/multipleJevils"]
position = Vector2( -14, 1 )

[node name="sprite" type="AnimatedSprite" parent="spriteJoint/multipleJevils/jevil1"]
frames = ExtResource( 1 )
animation = "bounce"
frame = 6
speed_scale = 1.5
playing = true

[node name="jevil2" type="Node2D" parent="spriteJoint/multipleJevils"]
position = Vector2( 5, -1 )

[node name="sprite" type="AnimatedSprite" parent="spriteJoint/multipleJevils/jevil2"]
frames = ExtResource( 1 )
animation = "bounce"
frame = 3
speed_scale = 1.5
playing = true

[node name="jevil3" type="Node2D" parent="spriteJoint/multipleJevils"]
position = Vector2( -5, -6 )

[node name="sprite" type="AnimatedSprite" parent="spriteJoint/multipleJevils/jevil3"]
frames = ExtResource( 1 )
animation = "bounce"
frame = 7
speed_scale = 1.5
playing = true

[node name="dizzy" type="Node2D" parent="."]
modulate = Color( 1, 1, 1, 0 )

[node name="ring0" type="Sprite" parent="dizzy"]
position = Vector2( 0, -19 )
texture = ExtResource( 11 )

[node name="ring1" type="Sprite" parent="dizzy"]
position = Vector2( 0, -28 )
texture = ExtResource( 13 )

[node name="ring2" type="Sprite" parent="dizzy"]
position = Vector2( 0, -43 )
texture = ExtResource( 12 )

[node name="devilsKnife" type="Sprite" parent="."]
position = Vector2( 0, -12 )
scale = Vector2( 1e-05, 1 )
texture = ExtResource( 10 )

[node name="ha0" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="ha1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="hurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = 10.0

[node name="metamorphosis" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="laugh" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="dizzySound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
